--- a/vrside/src/App.css
+++ b/vrside/src/App.css
@@ -1,42 +1,44 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  /*fonts var*/
+  --font-title: "Teko", sans-serif;
+  --font-text: "Instrument Sans", sans-serif;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/*BTN*/
+.vr-btn{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.vr-btn a{
+  padding: 0.8rem 2rem;
+  text-decoration: none;
+  font-family: var(--font-text);
+  font-size: clamp(1rem, 0.4857rem + 0.5714vw, 1.2rem);
+  color: #fff;
+  border: #fff solid 1px;
+  border-radius: 30px;
 }
 
-.card {
-  padding: 2em;
+.vr-btn .arrow{
+  padding: 0.8rem 0.9rem;
+  border-radius: 50%;
+  background: #BA3A3A;
+  border: none;
 }
 
-.read-the-docs {
-  color: #888;
+.vr-btn a img{
+  padding-top: 0.1rem;
+  width: 20px;
+  height: auto;
 }
+
